# cli-starter--poetry--py

./: .gitignore  README.md  pyproject.toml
src/app0/: cli.py  utils.py
