[project]
name = "app0"
version = "0.1.0"
description = ""
authors = [
    {name = "Vukovic Nikola",email = "admin@nikolav.rs"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer (>=0.21.0,<0.22.0)",
    "rich (>=14.2.0,<15.0.0)"
]

[tool.poetry]
packages = [{include = "app0", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
app0  = "app0.cli:main"
utils = "app0.utils:main"
